# template-cpp

./: .clang-format  .clang-tidy  .cmake-format  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CompilerWarnings.cmake  GetAllTargets.cmake  InstallDirectories.cmake  OutputDirectories.cmake  ProjectName.cmake  UseCcache.cmake  UseClangTidy.cmake  UseCppCheck.cmake  UseIPO.cmake
docs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
